gitignore + css pasado a sass completo + reacomodacion imgs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="./assets/img/logo.png">
 </head>
 <body>
-    <header class="headerIndex">
-        <nav class="headerMenu">
+    <header>
+        <nav>
             <div class="headerLogo">
                 <a href="#"><img src="./assets/img/logo.png" alt=""></a>
                 <a href="#">Life Experience</a>
@@ -28,15 +28,13 @@
             </div>
         </nav>
     </header>
-    <main>
-        <div class="divEdge">
-            <h1>SEDES</h1>
-        </div>
+    <main class="mainIndex">
+        <h1>SALAS DE ESCAPE</h1>
         <section class="indexMain">
-            <div class="indexCarouselItem" id="carouselItem-1">
+            <div id="carouselItem-1">
                 <div class="cardCarouselItem">
                     <a href="./pages/sedes.html">
-                        <h2 class="carouselItem_1-h2">Caballito</h2>
+                        <h3 class="carouselItem_1-h2">Caballito</h3>
                     </a>
                 </div>
                 <div class="arrowsCarouselItem">
@@ -48,10 +46,10 @@
                     </a>
                 </div>
             </div>
-            <div class="indexCarouselItem" id="carouselItem-2">
+            <div id="carouselItem-2">
                 <div class="cardCarouselItem">
                     <a href="./pages/sedes.html">
-                        <h2 class="carouselItem_2-h2">Palermo</h2>
+                        <h3 class="carouselItem_2-h2">Palermo</h3>
                     </a>
                 </div>
                 <div class="arrowsCarouselItem">
@@ -63,10 +61,10 @@
                     </a>
                 </div>
             </div>
-            <div class="indexCarouselItem" id="carouselItem-3">
+            <div id="carouselItem-3">
                 <div class="cardCarouselItem">
                     <a href="./pages/sedes.html">
-                        <h2 class="carouselItem_3-h2">Belgrano</h2>
+                        <h3 class="carouselItem_3-h2">Belgrano</h3>
                     </a>
                 </div>
                 <div class="arrowsCarouselItem">
@@ -79,18 +77,14 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="divEdge">
-                <h2>Lorem ipsum dolor sit amntipti ut natus iusto dolorem cupiditate
-                    illo numquam voluptatem nemo neque?</h2>
-            </div>
-        </section>
+        <div class="edge">
+            <h3>Lorem ipsum dcu pid ita tedcup iditat e  upi ditate
+                illo numquam voluptatem nemo neque?</h3>
+        </div>
         <section class="indexRooms">
-            <article class="roomSection">
-                <div class="divFirstRoom">
-                    <a href=""><img src="./assets/img/creep-1.jpg" alt="hombre terrorífico"></a>
-                </div>
-                <div class="divText">
+            <article>
+                <a href=""><img src="./assets/img/creep-1.jpg" alt="hombre terrorífico"></a>
+                <div>
                     <a href="">
                         <h2>Atrapados sin salida</h2>
                     </a>
@@ -99,11 +93,9 @@
                         recusandae corrupti vero dignissimos?</p>
                 </div>
             </article>
-            <article class="roomSection">
-                <div class="divSecondRoom">
-                    <a href="./pages/futurix.html"><img src="./assets/img/casa-2.webp" alt="casa lujosa 2"></a>
-                </div>
-                <div class="divText">
+            <article>
+                <a href="./pages/futurix.html"><img src="./assets/img/casa-2.jpg" alt="casa lujosa 2"></a>
+                <div>
                     <a href="./pages/futurix.html">
                         <h2>Futurix Hogares</h2>
                     </a>
@@ -112,59 +104,53 @@
                         Iste, dicta quaerat! Et, sapiente!</p>
                 </div>
             </article>
-            <article class="roomSection">
-                <div class="divThirdRoom">
-                    <a href=""><img src="./assets/img/mistero.webp" alt="gorro, lupa y pipa"></a>
-                </div>
-                <div class="divText">
+            <article>
+                <a href=""><img src="./assets/img/mistero.jpg" alt="gorro, lupa y pipa"></a>
+                <div>
                     <a href="">
                         <h2>Sherlock Holmes vuelve</h2>
                     </a>
-                    <p>Lorem ipsum dolor qt cot. nobis natus voluptatem quae! Nam quia porro impedit facilis harum
-                        officia, nihil molestiae reprehenderit? Amet molestiae quia consequatur saepe!</p>
+                    <p>Loremlore ipslo Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium odit consequuntur libero ipsum eligendi fugiat sapiente quos repellat delectus nesciunt magnam tempora quibusdam incidunt, cumque repellendus ducimus veniam odio voluptates!stiae reprehenderit? Amet molestiae quia consequatur saepe!</p>
                 </div>
             </article>
         </section>
     </main>
     <footer>
-        <div>
-            <h4>SUCURSALES</h4>
-            <ul>
-                <li>Av. Triunvirato 2521, Belgrano</li>
-                <li>Santa Fé 3452, Palermo</li>
-                <li>Yerbal 353, Caballito</li>
-            </ul>
-        </div>
-        <div>
-            <ul>
-                <a href="">
-                    <li>EVENTOS</li>
-                </a>
-                <a href="">
-                    <li>INFO ADICIONAL</li>
-                </a>
-                <a href="">
-                    <li>RECLAMOS</li>
-                </a>
-                <a href="">
-                    <li>COMUNIDAD</li>
-                </a>
-            </ul>
-        </div>
-        <div class="footerFormContainer">
-            <form class="footerForm">
+        <section class="brands">
+            <div>
+                <h4>SUCURSALES</h4>
+                <ul>
+                    <li>Av. Triunvirato 2521, Belgrano</li>
+                    <li>Santa Fé 3452, Palermo</li>
+                    <li>Yerbal 353, Caballito</li>
+                </ul>
+            </div>
+        </section>
+        <section class="list">
+            <div>
+                <ul>
+                    <a href=""><li>EVENTOS</li></a>
+                    <a href=""><li>INFO ADICIONAL</li></a>
+                    <a href=""><li>RECLAMOS</li></a>
+                    <a href=""><li>COMUNIDAD</li></a>
+                </ul>
+            </div>
+        </section>
+        <section class="form">
+            <form>
                 <label for="email">NEWSLETTER</label>
-                <input type="email" name="email" class="footerInputEmail" id="email" placeholder="Newsletter">
+                <input type="email" name="email" class="inputEmail" id="email" placeholder="Newsletter">
                 <input type="image" src="./assets/img/correo-electronico.png" class="sendForm">
             </form>
-        </div>
-        <div class="footerMedia">
-            <h4>FOLLOW US</h4>
-            <a href="https://twitter.com/home" target="_blank"><img src="./assets/img/twiter-logo.png" alt=""></a>
-            <a href="https://www.facebook.com/" target="_blank"><img src="./assets/img/facebook-logo.png" alt=""></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="./assets/img/instagram-logo.png" alt=""></a>
-        </div>
+        </section>
+        <section class="media">
+            <div>
+                <h4>FOLLOW US</h4>
+                <a href="https://twitter.com/home" target="_blank"><img src="./assets/img/twiter-logo.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="./assets/img/facebook-logo.png" alt=""></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="./assets/img/instagram-logo.png" alt=""></a>
+            </div>
+        </section>
     </footer>
 </body>
-
 </html>
