--- a/pages/futurix.html
+++ b/pages/futurix.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="../assets/img/logo.png">
 </head>
 <body>
-    <header class="headerIndex">
-        <nav class="headerMenu">
+    <header>
+        <nav>
             <div class="headerLogo">
                 <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
                 <a href="../index.html">Life Experience</a>
@@ -36,12 +36,12 @@
             </div>
             <div class="futurixMainImg">
                 <img src="../assets/img/casa.jpg" alt="Casa lujosa" class="futurixImg1">
-                <img src="../assets/img/casa-2.webp" alt="casa lujosa" class="futurixImg2">
+                <img src="../assets/img/casa-2.jpg" alt="casa lujosa" class="futurixImg2">
             </div>
         </section>
-        <section class="futurixSecondarySection">
+        <section class="futurixArticle">
             <article>
-                <div class="futurixArticle">
+                <div class="">
                     <h2>Casas inteligentes para un mañana mejor</h2>
                     <p>En Futurix trabajamos incansablemente para hacer tu vida mas fácil. Adaptamos la más sofisticada tecnología a los diseños mas modernos, para brindarte un espacio seguro, comfortable y cien por ciento adaptable a tus necesidades para que no tengas que preocuparte por nada.  <br><br>
                         Nuestras casas cuentan con electrodomésticos inteligentes que harán por tí todo lo que no tengas tiempo para hacer, como la limpeza, el lavado, incluso tender la cama, y un sistema interno de regulación que se encargará de mantener tu casa climatizada las 24 horas y si algo falla, lo repara ella misma. <br><br>
@@ -51,35 +51,41 @@
         </section>        
     </main>
     <footer>
-        <div>
-            <h4>SUCURSALES</h4>
-            <ul>
-                <li>Av. Triunvirato 2521, Belgrano</li>
-                <li>Santa Fé 3452, Palermo</li>
-                <li>Yerbal 353, Caballito</li>
-            </ul>
-        </div>
-        <div>
-            <ul>
-                <a href=""><li>EVENTOS</li></a>
-                <a href=""><li>INFO ADICIONAL</li></a>
-                <a href=""><li>RECLAMOS</li></a>
-                <a href=""><li>COMUNIDAD</li></a>
-            </ul>
-        </div>
-        <div class="footerFormContainer">
-            <form class="footerForm">
+        <section class="brands">
+            <div>
+                <h4>SUCURSALES</h4>
+                <ul>
+                    <li>Av. Triunvirato 2521, Belgrano</li>
+                    <li>Santa Fé 3452, Palermo</li>
+                    <li>Yerbal 353, Caballito</li>
+                </ul>
+            </div>
+        </section>
+        <section class="list">
+            <div>
+                <ul>
+                    <a href=""><li>EVENTOS</li></a>
+                    <a href=""><li>INFO ADICIONAL</li></a>
+                    <a href=""><li>RECLAMOS</li></a>
+                    <a href=""><li>COMUNIDAD</li></a>
+                </ul>
+            </div>
+        </section>
+        <section class="form">
+            <form>
                 <label for="email">NEWSLETTER</label>
-                <input type="email" name="email" class="footerInputEmail" id="email" placeholder="Newsletter">
+                <input type="email" name="email" class="inputEmail" id="email" placeholder="Newsletter">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
-        </div>
-        <div class="footerMedia">
-            <h4>FOLLOW US</h4>
-            <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
-            <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
-        </div>
+        </section>
+        <section class="media">
+            <div>
+                <h4>FOLLOW US</h4>
+                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
