--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="../assets/img/logo.png">
 </head>
 <body>
-    <header class="headerIndex">
-        <nav class="headerMenu">
+    <header>
+        <nav>
             <div class="headerLogo">
                 <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
                 <a href="../index.html">Life Experience</a>
@@ -131,43 +131,41 @@
         </section>
     </main>
     <footer>
-        <div>
-            <h4>SUCURSALES</h4>
-            <ul>
-                <li>Av. Triunvirato 2521, Belgrano</li>
-                <li>Santa Fé 3452, Palermo</li>
-                <li>Yerbal 353, Caballito</li>
-            </ul>
-        </div>
-        <div>
-            <ul>
-                <a href="">
-                    <li>EVENTOS</li>
-                </a>
-                <a href="">
-                    <li>INFO ADICIONAL</li>
-                </a>
-                <a href="">
-                    <li>RECLAMOS</li>
-                </a>
-                <a href="">
-                    <li>COMUNIDAD</li>
-                </a>
-            </ul>
-        </div>
-        <div class="footerFormContainer">
-            <form class="footerForm">
-                <label for="email">NESWLETTER</label>
-                <input type="email" name="email" class="footerInputEmail" id="email" placeholder="Newsletter">
+        <section class="brands">
+            <div>
+                <h4>SUCURSALES</h4>
+                <ul>
+                    <li>Av. Triunvirato 2521, Belgrano</li>
+                    <li>Santa Fé 3452, Palermo</li>
+                    <li>Yerbal 353, Caballito</li>
+                </ul>
+            </div>
+        </section>
+        <section class="list">
+            <div>
+                <ul>
+                    <a href=""><li>EVENTOS</li></a>
+                    <a href=""><li>INFO ADICIONAL</li></a>
+                    <a href=""><li>RECLAMOS</li></a>
+                    <a href=""><li>COMUNIDAD</li></a>
+                </ul>
+            </div>
+        </section>
+        <section class="form">
+            <form>
+                <label for="email">NEWSLETTER</label>
+                <input type="email" name="email" class="inputEmail" id="email" placeholder="Newsletter">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
-        </div>
-        <div class="footerMedia">
-            <h4>FOLLOW US</h4>
-            <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
-            <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
-        </div>
+        </section>
+        <section class="media">
+            <div>
+                <h4>FOLLOW US</h4>
+                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
