--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="../assets/img/logo.png">
 </head>
 <body>
-    <header class="headerIndex">
-        <nav class="headerMenu">
+    <header>
+        <nav>
             <div class="headerLogo">
                 <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
                 <a href="../index.html">Life Experience</a>
@@ -20,10 +20,10 @@
             <div class="navBar">
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="sedes.html">Sedes</a></li>
+                    <li><a href="#">Sedes</a></li>
                     <li><a href="f.a.q.html">F.A.Q.</a></li>
                     <li><a href="reservas.html">Reservas</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,49 +39,55 @@
             <h4>Belgrano</h4>
             <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl&pli=1#inbox?compose=GTvVlcRwPkVKRHPMqCXklPFPzgkgjzkvGFMWpxFPljGSsGnkHpjPcnjlNjMJWlHHChSqkhMncGBKk" target="_blank"><h4>sosalucas906@gmail.com</h4></a>
         </section>
-        <div class="contactForm">
+        <section class="contactForm">
             <form class="contactFormInput">
-                <input type="text" class="formInput" placeholder="Nombre">
-                <input type="text" class="formInput" placeholder="Asunto">
-                <input type="email" class="formInput" placeholder="Mail">
+                <input type="text" placeholder="Nombre">
+                <input type="text" placeholder="Asunto">
+                <input type="email" placeholder="Mail">
                 <textarea name="userMessage" class="formInput" id="msg" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                <input type="submit" class="formInput">
+                <input type="submit">
             </form>
             <div class="contactFormImg">
                 <img src="../assets/img/correo-electronico.png" alt="">
             </div>
-        </div>
+        </section>
     </main>
     <footer>
-        <div>
-            <h4>SUCURSALES</h4>
-            <ul>
-                <li>Av. Triunvirato 2521, Belgrano</li>
-                <li>Santa Fé 3452, Palermo</li>
-                <li>Yerbal 353, Caballito</li>
-            </ul>
-        </div>
-        <div>
-            <ul>
-                <a href=""><li>EVENTOS</li></a>
-                <a href=""><li>INFO ADICIONAL</li></a>
-                <a href=""><li>RECLAMOS</li></a>
-                <a href=""><li>COMUNIDAD</li></a>
-            </ul>
-        </div>
-        <div>
-            <form class="footerForm">
+        <section class="brands">
+            <div>
+                <h4>SUCURSALES</h4>
+                <ul>
+                    <li>Av. Triunvirato 2521, Belgrano</li>
+                    <li>Santa Fé 3452, Palermo</li>
+                    <li>Yerbal 353, Caballito</li>
+                </ul>
+            </div>
+        </section>
+        <section class="list">
+            <div>
+                <ul>
+                    <a href=""><li>EVENTOS</li></a>
+                    <a href=""><li>INFO ADICIONAL</li></a>
+                    <a href=""><li>RECLAMOS</li></a>
+                    <a href=""><li>COMUNIDAD</li></a>
+                </ul>
+            </div>
+        </section>
+        <section class="form">
+            <form>
                 <label for="email">NEWSLETTER</label>
-                <input type="email" name="email" class="footerInputEmail" id="email" placeholder="Newsletter">
+                <input type="email" name="email" class="inputEmail" id="email" placeholder="Newsletter">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
-        </div>
-        <div class="footerMedia">
-            <h4>FOLLOW US</h4>
-            <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
-            <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
-        </div>
+        </section>
+        <section class="media">
+            <div>
+                <h4>FOLLOW US</h4>
+                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
