--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -71,8 +71,8 @@
     </section>
     <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto"
       id="intro">
-      <h1 class="p-3 fs-2 border-top border-3">Una agencia única para todas tus necesidades de <span
-          class="text-primary">Marketing Digital<span /></h1>
+      <h1 class="p-3 fs-2 border-top border-3">Una agencia única para todas tus necesidades de <span>
+          class="text-primary">Marketing Digital</span ></h1>
       <p class="p-3  fs-4">
         <span class="text-primary">ExpertD.</span> es la agencia donde te ayudamos establecer tu presencia online. SEO,
         paginas WEB, tiendas virtuales, redes sociales
@@ -116,7 +116,7 @@
         </div>
       </article>
     </section>
-    <section>
+    <section class="equipo">
       <div class="container w-50 m-auto text-center" id="equipo">
         <h1 class="mb-5 fs-2">Equipo pequeño con <span class="text-primary">resultados Grandes</span>.</h1>
         <p class="fs-4 ">Siempre buscamos las personas adecuadas para que trabajen con nosotros. Si te sientes listo
