responsive completo en todos los html + seo + animaciones + sass completo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Life Experience ofrece la mejor selección de salas de escape de Buenos Aires para disfrutar con amigos. Reservas habilitadas.">
+    <meta name="keywords" content="escape, salas de escape, entrentenimiento, enigmas, salida con amigos, acertijos, diversión, juegos">
+    <meta name="author" content="Lucas Daniel Sosa">
+    <meta name="copyright" content="Life Experience scape rooms">
+    <meta property="og:title" content=incio - life experience>
+    <meta property="og:site_name" content=Life experience>
+    <meta property="og:url" content=https://lucasds906.github.io/proyecto-final-life-experience/>
+    <meta property="og:description" content=Las mejores salas de escape del pais, en Life experience>
+    <meta property="og:type" content=website>
+    <meta name="robots" content="index, follow">
     <title>Life Experience</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="./css/style.css">
@@ -12,7 +22,7 @@
     <header>
         <nav>
             <div class="headerLogo">
-                <a href="#"><img src="./assets/img/logo.png" alt=""></a>
+                <a href="#"><img src="./assets/img/logo.png" alt="logo teseracto"></a>
                 <a href="#">Life Experience</a>
             </div>
             <input type="checkbox" name="" id="toggle">
@@ -146,9 +156,9 @@
         <section class="media">
             <div>
                 <h4>FOLLOW US</h4>
-                <a href="https://twitter.com/home" target="_blank"><img src="./assets/img/twiter-logo.png" alt=""></a>
-                <a href="https://www.facebook.com/" target="_blank"><img src="./assets/img/facebook-logo.png" alt=""></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="./assets/img/instagram-logo.png" alt=""></a>
+                <a href="https://twitter.com/home" target="_blank"><img src="./assets/img/twiter-logo.png" alt="logo de twitter"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="./assets/img/facebook-logo.png" alt="logo de facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="./assets/img/instagram-logo.png" alt="logo de instagram"></a>
             </div>
         </section>
     </footer>
