--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página para ponerte en contacto con nostros, ya se por dudas, consultas o reclamos">
+    <meta name="keywords" content="escape, salas de escape, entrentenimiento, enigmas, salida con amigos, acertijos, diversión, juegos">
+    <meta name="author" content="Lucas Daniel Sosa">
+    <meta name="copyright" content="Life Experience scape rooms">
+    <meta property="og:title" content=incio - life experience>
+    <meta property="og:site_name" content=Life experience>
+    <meta property="og:url" content=https://lucasds906.github.io/proyecto-final-life-experience/>
+    <meta property="og:description" content=Las mejores salas de escape del pais, en Life experience>
+    <meta property="og:type" content=website>
+    <meta name="robots" content="index, follow">
     <title>Life Experience</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +22,7 @@
     <header>
         <nav>
             <div class="headerLogo">
-                <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
+                <a href="../index.html"><img src="../assets/img/logo.png" alt="logo teseracto"></a>
                 <a href="../index.html">Life Experience</a>
             </div>
             <input type="checkbox" name="" id="toggle">
@@ -20,24 +30,23 @@
             <div class="navBar">
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="#">Sedes</a></li>
+                    <li><a href="sedes.html">Sedes</a></li>
                     <li><a href="f.a.q.html">F.A.Q.</a></li>
                     <li><a href="reservas.html">Reservas</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <main class="contactMain">
-        <h1>Contáctanos</h1>
+        <h1>Contacto</h1>
+        <div class="border"></div>
+        <h4>contacto@life-experience.com</h4>
+        <div class="border"></div>
         <section class="contactNumber">
-            <a href=""><h4>+54911555555555</h4></a>
-            <a href=""><h4>+54911555555555</h4></a>
-            <a href=""><h4>+54911555555555</h4></a>
-            <h4>Caballito</h4>
-            <h4>Palermo</h4>
-            <h4>Belgrano</h4>
-            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl&pli=1#inbox?compose=GTvVlcRwPkVKRHPMqCXklPFPzgkgjzkvGFMWpxFPljGSsGnkHpjPcnjlNjMJWlHHChSqkhMncGBKk" target="_blank"><h4>sosalucas906@gmail.com</h4></a>
+            <h3>Caballito<a href=""> +54911555555555</a></h3>
+            <h3>Palermo<a href=""> +54911555555555</a></h3>
+            <h3>Belgrano<a href=""> +54911555555555</a></h3>
         </section>
         <section class="contactForm">
             <form class="contactFormInput">
@@ -48,7 +57,7 @@
                 <input type="submit">
             </form>
             <div class="contactFormImg">
-                <img src="../assets/img/correo-electronico.png" alt="">
+                <img src="../assets/img/correo-electronico.png" alt="logo correo-electronico">
             </div>
         </section>
     </main>
@@ -83,9 +92,9 @@
         <section class="media">
             <div>
                 <h4>FOLLOW US</h4>
-                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
-                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
+                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt="logo de twitter"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt="logo de facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt="logo de instagram"></a>
             </div>
         </section>
     </footer>
