--- a/pages/f.a.q.html
+++ b/pages/f.a.q.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tienes dudas? Aquí encontrarás las preguntas que más nos hacen nuestros usuarios">
+    <meta name="keywords" content="escape, salas de escape, entrentenimiento, enigmas, salida con amigos, acertijos, diversión, juegos">
+    <meta name="author" content="Lucas Daniel Sosa">
+    <meta name="copyright" content="Life Experience scape rooms">
+    <meta property="og:title" content=incio - life experience>
+    <meta property="og:site_name" content=Life experience>
+    <meta property="og:url" content=https://lucasds906.github.io/proyecto-final-life-experience/>
+    <meta property="og:description" content=Las mejores salas de escape del pais, en Life experience>
+    <meta property="og:type" content=website>
+    <meta name="robots" content="index, follow">
     <title>Life Experience</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +22,7 @@
     <header>
         <nav>
             <div class="headerLogo">
-                <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
+                <a href="../index.html"><img src="../assets/img/logo.png" alt="logo teseracto"></a>
                 <a href="../index.html">Life Experience</a>
             </div>
             <input type="checkbox" name="" id="toggle">
@@ -31,7 +41,24 @@
     <main>
         <section class="faqMainSection">
             <h1>Preguntas Frecuentes</h1>
-            <div class="faqQuestions">    
+            <div class="faqImgs">
+                <div>                    
+                    <img src="../assets/img/nine-oclock_.png" alt="logo reloj">
+                    <h3>Llegá 15 minutos antes. Así podrás disfrutar a pleno de Life Experience y ahorrarías tiempo al confirmar la reserva.
+                    </h3>
+                </div>
+                <div>
+                    <img src="../assets/img/no-mobile-phones.png" alt="logo no celular">
+                    <h3>El celular, mejor afuera.
+                        Te pedimos amablemente que que dejes el celular junto con tus objetos de valor, y en caso de no dejarlo, por favor no compartas los secretos de tu juego. Ah, ¡y nada de fotos, por favor!
+                    </h3>
+                </div>
+                <div>
+                    <img src="../assets/img/locked-with-key_.png" alt="logo candado">
+                    <h3>Guardamos tus objetos de valor. ¿Traes bolsos, teléfonos o computadoras? Cuidaremos de todo, así que no tenés que preocuparte.</h3>
+                </div>
+            </div>
+            <div class="questions">    
                 <a href=""><h2>+Qué es Life Experience?</h2></a>
                 <p>Life Experience es una empresa dedicada a ofrecer a los usuarios una actividad diferente, en la que se sumergirán de lleno en una historia pensada y adaptada para cada grupo, experimentando en carne propia la tensión, la adrenalina, y con detalles incluídos para hacer de esta una hora inolvidable.
                     En este caso los participantes tendrán una hora para resolver los diferentes enigmas y escapar con vida a través de las distintas habitaciones de cada sala.</p>
@@ -54,11 +81,10 @@
                 <a href=""><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
                 <a href=""><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
                 <a href=""><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
-                <p class="">Si tu pregunta no se encuentra en la lsita, ponte en contacto con nostros a 
+                <p>Si tu pregunta no se encuentra en la lsita, ponte en contacto con nostros a 
                     <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl&pli=1#inbox?compose=GTvVlcRwPkVKRHPMqCXklPFPzgkgjzkvGFMWpxFPljGSsGnkHpjPcnjlNjMJWlHHChSqkhMncGBKk" target="_blank">sosalucas906@gmail.com</a></p>
             </div>
         </section>
-        
     </main>
     <footer>
         <section class="brands">
@@ -91,9 +117,9 @@
         <section class="media">
             <div>
                 <h4>FOLLOW US</h4>
-                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
-                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
+                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt="logo de twitter"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt="logo de facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt="logo de instagram"></a>
             </div>
         </section>
     </footer>
