--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página para hacer reservas de nuestras salas de escape">
+    <meta name="keywords" content="escape, salas de escape, entrentenimiento, enigmas, salida con amigos, acertijos, diversión, juegos">
+    <meta name="author" content="Lucas Daniel Sosa">
+    <meta name="copyright" content="Life Experience scape rooms">
+    <meta property="og:title" content=incio - life experience>
+    <meta property="og:site_name" content=Life experience>
+    <meta property="og:url" content=https://lucasds906.github.io/proyecto-final-life-experience/>
+    <meta property="og:description" content=Las mejores salas de escape del pais, en Life experience>
+    <meta property="og:type" content=website>
+    <meta name="robots" content="index, follow">
     <title>Life Experience</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +22,7 @@
     <header>
         <nav>
             <div class="headerLogo">
-                <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
+                <a href="../index.html"><img src="../assets/img/logo.png" alt="logo teseracto"></a>
                 <a href="../index.html">Life Experience</a>
             </div>
             <input type="checkbox" name="" id="toggle">
@@ -50,63 +60,63 @@
             <div class="bookingRooms">
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/foto-1.jpg" alt="">
+                        <img src="../assets/img/foto-1.jpg" alt="foto random">
                     </div>
                     <h2>Sala 1</h2>
                     <button><a href="">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/foto-2.jpg" alt="">
+                        <img src="../assets/img/foto-2.jpg" alt="foto random">
                     </div>
                     <h2>Sala 2</h2>
                     <button><a href="">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/foto-3.jpg" alt="">
+                        <img src="../assets/img/foto-3.jpg" alt="foto random">
                     </div>
                     <h2>Sala 3</h2>
                     <button><a href="">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/foto-4.jpg" alt="">
+                        <img src="../assets/img/foto-4.jpg" alt="foto random">
                     </div>
                     <h2>Sala 4</h2>
                     <button><a href="">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/foto-5.jpg" alt="">
+                        <img src="../assets/img/foto-5.jpg" alt="foto random">
                     </div>
                     <h2>Sala 5</h2>
                     <button><a href="">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/mujer-velo-400x600.jpg" alt="">
+                        <img src="../assets/img/mujer-velo-400x600.jpg" alt="mujer velo negro">
                     </div>
                     <h2>Sala 6</h2>
                     <button><a href="">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/mujer-velo-400x600.jpg" alt="">
+                        <img src="../assets/img/mujer-velo-400x600.jpg" alt="mujer velo negro">
                     </div>
                     <h2>Sala 7</h2>
                     <button><a href="">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/mujer-velo-400x600.jpg" alt="">
+                        <img src="../assets/img/mujer-velo-400x600.jpg" alt="mujer velo negro">
                     </div>
                     <h2>Sala 8</h2>
                     <button><a href="">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
-                        <img src="../assets/img/mujer-velo-400x600.jpg" alt="">
+                        <img src="../assets/img/mujer-velo-400x600.jpg" alt="mujer velo negro">
                     </div>
                     <h2>Sala 9</h2>
                     <button><a href="">Reservar</a></button>
@@ -161,9 +171,9 @@
         <section class="media">
             <div>
                 <h4>FOLLOW US</h4>
-                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
-                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
+                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt="logo de twitter"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt="logo de facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt="logo de instagram"></a>
             </div>
         </section>
     </footer>
