--- a/pages/futurix.html
+++ b/pages/futurix.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Futurix hogares es una de nuestras salas de escape mas famosas, y la que más suelen elegir los jugadores">
+    <meta name="keywords" content="escape, salas de escape, entrentenimiento, enigmas, salida con amigos, acertijos, diversión, juegos">
+    <meta name="author" content="Lucas Daniel Sosa">
+    <meta name="copyright" content="Life Experience scape rooms">
+    <meta property="og:title" content=incio - life experience>
+    <meta property="og:site_name" content=Life experience>
+    <meta property="og:url" content=https://lucasds906.github.io/proyecto-final-life-experience/>
+    <meta property="og:description" content=Las mejores salas de escape del pais, en Life experience>
+    <meta property="og:type" content=website>
+    <meta name="robots" content="index, follow">
     <title>Life Experience</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +22,7 @@
     <header>
         <nav>
             <div class="headerLogo">
-                <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
+                <a href="../index.html"><img src="../assets/img/logo.png" alt="logo teseracto"></a>
                 <a href="../index.html">Life Experience</a>
             </div>
             <input type="checkbox" name="" id="toggle">
@@ -36,12 +46,12 @@
             </div>
             <div class="futurixMainImg">
                 <img src="../assets/img/casa.jpg" alt="Casa lujosa" class="futurixImg1">
-                <img src="../assets/img/casa-2.jpg" alt="casa lujosa" class="futurixImg2">
+                <img src="../assets/img/casa-2.jpg" alt="casa lujosa 2" class="futurixImg2">
             </div>
         </section>
         <section class="futurixArticle">
             <article>
-                <div class="">
+                <div>
                     <h2>Casas inteligentes para un mañana mejor</h2>
                     <p>En Futurix trabajamos incansablemente para hacer tu vida mas fácil. Adaptamos la más sofisticada tecnología a los diseños mas modernos, para brindarte un espacio seguro, comfortable y cien por ciento adaptable a tus necesidades para que no tengas que preocuparte por nada.  <br><br>
                         Nuestras casas cuentan con electrodomésticos inteligentes que harán por tí todo lo que no tengas tiempo para hacer, como la limpeza, el lavado, incluso tender la cama, y un sistema interno de regulación que se encargará de mantener tu casa climatizada las 24 horas y si algo falla, lo repara ella misma. <br><br>
@@ -81,9 +91,9 @@
         <section class="media">
             <div>
                 <h4>FOLLOW US</h4>
-                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt=""></a>
-                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt=""></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
+                <a href="https://twitter.com/home" target="_blank"><img src="../assets/img/twiter-logo.png" alt="logo de twitter"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../assets/img/facebook-logo.png" alt="logo de facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt="logo de instagram"></a>
             </div>
         </section>
     </footer>
